# pyth-agent

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  agent.Dockerfile  canary.md5sum  flake.nix  rust-toolchain.toml  shell.nix  tests.sh
.github/workflows/: image-push.yaml  rust.yaml  rustfmt.yaml
config/: config.sample.pythnet.toml  config.sample.pythtest.toml  config.toml
integration-tests/: Dockerfile  README.md  agent_conf.toml  message_buffer.json  pyproject.toml
integration-tests/message_buffer/: program_id.py
integration-tests/message_buffer/accounts/: message_buffer.py  whitelist.py
integration-tests/message_buffer/errors/: custom.py
integration-tests/message_buffer/instructions/: __init__.py  delete_buffer.py  initialize.py  put_all.py  set_allowed_programs.py  update_whitelist_admin.py  update_whitelist_authority.py
integration-tests/message_buffer/types/: __init__.py  buffer_header.py
integration-tests/message_buffer_client_codegen/: program_id.py
integration-tests/message_buffer_client_codegen/accounts/: __init__.py  message_buffer.py  whitelist.py
integration-tests/message_buffer_client_codegen/instructions/: __init__.py  create_buffer.py  initialize.py  put_all.py  resize_buffer.py  set_allowed_programs.py
integration-tests/tests/: test_integration.py
nix/: solana-validator.nix
proptest-regressions/agent/: market_schedule.txt
scripts/: init_key_store.sh
src/: agent.rs  gossiper.rs  lib.rs  prover.rs  publisher.rs  simulator.rs
src/agent/: adapter.rs  config.rs  dashboard.rs  holiday_hours.rs  legacy_schedule.rs  market_hours.rs  market_schedule.rs  metrics.rs  pyth.rs  remote_keypair_loader.rs  schedule.rs  services.rs  solana.rs  state.rs  store.rs  utils.rs
src/agent/adapter/: global.rs  local.rs
src/agent/pyth/: rpc.rs
src/agent/pyth/rpc/: get_all_products.rs  get_product.rs  get_product_list.rs  subscribe_price.rs  subscribe_price_sched.rs  update_price.rs
src/agent/pythd/: adapter.rs  api.rs
src/agent/pythd/adapter/: api.rs  global.rs
src/agent/pythd/api/: rpc.rs
src/agent/pythd/api/rpc/: get_all_products.rs  get_product.rs  get_product_list.rs  subscribe_price.rs  subscribe_price_sched.rs  update_price.rs
src/agent/schedule/: market_hours.rs
src/agent/services/: exporter.rs  keypairs.rs  lazer_exporter.rs  notifier.rs  oracle.rs
src/agent/solana/: exporter.rs  oracle.rs
src/agent/state/: api.rs  exporter.rs  global.rs  keypairs.rs  local.rs  oracle.rs  transactions.rs
src/agent/store/: global.rs  local.rs
src/agent/utils/: rpc_multi_client.rs
src/prover/circom/: CheckLength.circom  ElementAt.circom  InputVerifier.circom  Median.circom  PriceModel.circom  Pyth.circom  SortedArray.circom  deploy_circuit.sh  generate_and_submit_calldata.py  generate_calldata.sh  generate_input.js  generate_proof.sh  package-lock.json  package.json  pyth.circom  setup.sh  verifier.sol  verifier_groth16.sol.ejs
src/prover/circom/lib/: Median.circom  SortedArray.circom  secp256k1.circom
src/prover/circom/test/: test-framework.js
src/prover/circom/verifier_contract/: package-lock.json  package.json  truffle-config.js  zk_pyth.sol
src/prover/circom/verifier_contract/contracts/: CircomVerifier.sol  ZKPyth.sol
src/prover/circom/verifier_contract/migrations/: 2_deploy_pyth_zk.js
src/publisher/: pythd.rs  store.rs
src/publisher/pythd/: adapter.rs  api.rs
src/publisher/solana/: exporter.rs  oracle.rs
src/publisher/store/: global.rs  local.rs
src/pythd/: api.rs
test/test/: test-framework.js
