[package]
name = "pyth-agent"
version = "3.0.3"
edition = "2024"

[[bin]]
name = "agent"
path = "src/bin/agent.rs"

[dependencies]
anyhow = "1.0.81"
backoff = "0.4.0"
base64 = "0.22.1"
ed25519-dalek = "2.1.1"
serde = { version = "1.0.197", features = ["derive", "rc"] }
async-trait = "0.1.79"
warp = { version = "0.3.6", features = ["websocket"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
futures = { version = "0.3.30" }
futures-util = { version = "0.3.30", default-features = false, features = [
    "sink",
] }
jrpc = "0.4.1"
serde_json = "1.0.115"
chrono = "0.4.37"
chrono-tz = "0.10.3"
pyth-sdk = "0.8.0"
pyth-sdk-solana = "0.10.4"
solana-account-decoder = "2.2.1"
solana-client = "2.2.1"
solana-pubkey = "2.2.1"
solana-sdk = "2.2.1"
solana-transaction-status = "2.2.1"
bincode = { version = "2.0.1", features = ["serde"] }
config = "0.15.11"
thiserror = "2.0.12"
clap = { version = "4.5.4", features = ["derive"] }
humantime-serde = "1.1.1"
serde-this-or-that = "0.5.0"
prometheus-client = "0.23.1"
lazy_static = "1.4.0"
winnow = "0.7.7"
proptest = "1.4.0"
reqwest = { version = "0.12.0", features = ["json"] }
smol_str = { version="0.3.2", features=["serde"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.24.0"
opentelemetry = "0.23.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16.0" }
protobuf = "3.7.2"
pyth-price-store = "0.1.0"
bytemuck = "1.13.0"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls", "url"] }
http = "1.3.1"
url = { version = "2.5.4", features = ["serde"] }
pyth-lazer-publisher-sdk = "0.1.5"

[dev-dependencies]
tempfile = "3.20.0"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
