[tool.poetry]
name = "integration-tests"
version = "0.1.0"
description = ""
authors = ["Pyth Data Association <contact@pyth.network>"]
readme = "README.md"
packages = [{ include = "integration_tests" }]

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.dev-dependencies]
anchorpy = "^0.16.0"
program-admin = { git = "https://github.com/drozdziak1/program-admin.git", branch = "drozdziak1/bump-solana" }
pytest = "^7.2"
pre-commit = "^2.21.0"
requests = "^2.28.2"
jsonrpc_websocket = "^3.1.4"
pytest-asyncio = "^0.20.0"

[tool.poetry.group.dev.dependencies]
solana = "^0.29.2"
solders = "^0.14.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
