[tool.poetry]
name = "integration-tests"
version = "0.1.0"
description = ""
authors = ["Pyth Data Association <contact@pyth.network>"]
readme = "README.md"
packages = [{ include = "integration_tests" }]

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.dev-dependencies]
anchorpy = "0.14.0"
program-admin = { git = "https://github.com/pyth-network/program-admin.git", branch = "main" }
pytest = "^7.2"
pytest-asyncio = "^0.20.0"
pre-commit = "^2.21.0"
requests = "^2.28.2"
jsonrpc_websocket = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
